fixed UI on mobile when quoting a post

--- a/modules/installed/forum/forum.styles.css
+++ b/modules/installed/forum/forum.styles.css
@@ -12,7 +12,6 @@
 .dropdown-toggle-hover:hover .dropdown-menu {
 	display: block;
 	margin-left: -142px;
-	margin-top: -18px;
 	width: 150px;
 }
 
